--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "live-server": "^1.2.1",
     "typescript": "^3.7.3",
     "set-value": ">=4.0.1",
-    "glob-parent": "5.1.2",
+    "glob-parent": ">=5.1.2",
     "kind-of": ">=6.0.3"
   }
 }
